# lncrawl-rust

./: Cargo.toml  README.md  Rocket.toml
sources/: novel27.json
src/: main.rs  novel.rs  source.rs
style/: tabler.css
templates/: find.html.tera
templates/partials/: footer.html.tera  header.html.tera  nav.html.tera
