[package]
name = "MyLibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub-builder = "0.5.0"
rust-embed = "6.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
